@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Support prereqs.json/prereqs.yml prereqs files with [PrereqsFile]
 
 v1.0.1    2020-03-09 17:52:54 EDT
   - Remove [MetaConfig] to reduce META clutter
